# CSV-to-Dashboard

./: README.md  pyproject.toml
data/: sample_business_data.csv
output/: app.py  dashboard.py  dashboard.py_design.md
src/bi_dashboard_builder/: crew.py  main.py
src/bi_dashboard_builder/config/: agents.yaml  tasks.yaml
