[project]
name = "bi_dashboard_builder"
version = "0.1.0"
description = "BI-dashboard-builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
bi_dashboard_builder = "bi_dashboard_builder.main:run"
run_crew = "bi_dashboard_builder.main:run"
train = "bi_dashboard_builder.main:train"
replay = "bi_dashboard_builder.main:replay"
test = "bi_dashboard_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
